[melhoria] adicionar novo endpoint de concluir aula para o backend.
